# 2-team-planit-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  GLOSSARY.md  PLAN.md  docker-compose.mongodb.yml  docker-compose.redis.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cd-dev.yml  cd.yml  ci.yml  rollback.yml
.serena/: project.yml
app/: main.py
app/api/: deps.py  routes.py
app/api/V1/: routers.py
app/core/: BackendClient.py  config.py  confing.py  langfuse_setup.py  redis_client.py
app/core/Agents/Chat/: ChatAgent.md  ChatState.py  Orchestrator.py  OrchestratorDAG.py  TopicFilter.py  system_prompt.py
app/core/Agents/ItineraryPlan/: ConstraintValidAgent.py  DistanceCalculateAgent.py  InfoSearchAgent.py  ItineraryPlanAgent.md  ItineraryPlanAgent.py  Planner.py  PoiEnrichAgent.py  ScheduleAgent.py  TodoAgent.py  TransferCache.py
app/core/Agents/Poi/: POIAgent.md  (+4 more)
app/core/LLMClient/: BaseLlmClient.py  LLMClient.md  LangchainClient.py  OpenAiApiClient.py  VllmClient.py
app/core/Prompt/: PersonaAgentPrompt.py
app/core/models/: models.md
app/schemas/: Itinerary.py  chatbot.py  persona.py  queue_message.py
app/service/Chatbot/: ChatbotService.py
app/service/Ininerary/: gen_init_Ininerary.py
app/test/core/: dummy_itinerary.py
app/worker/: __main__.py  itinerary_worker.py
docs/plans/: 2026-03-06-mongodb-docker-fix-design.md  2026-03-06-mongodb-docker-fix-plan.md
resources/: user-data.sh
scripts/: build_type_index.py  check_similarity.py  check_type_similarity.py  migrate_chromadb_to_mongodb.py  scan_types.py
(+92 files in other folders)
