[project]
name = "planit-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "httptools>=0.7.1",
    "langchain>=1.2.6",
    "langchain-core>=1.2.7",
    "langgraph>=1.0.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
    "uvloop>=0.22.1",
]
