[project]
name = "planit-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-openai>=0.3.0",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "sentence-transformers>=5.2.0",
    "tavily-python>=0.7.19",
    "uvicorn>=0.40.0",
    "uvloop>=0.22.1",
    "langextract>=0.1.0",
    "pillow>=12.1.0",
    "peft>=0.18.1",
    "torchvision>=0.25.0",
    "einops>=0.8.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/test"]
python_files = ["test_*.py", "Test*.py"]
addopts = "-s -vv"
asyncio_mode = "auto"
markers = [
    "unit: 단위 테스트 (모든 의존성 Mock 사용)",
    "integration: 통합 테스트 (모든 의존성 실제 사용)",
]
